<resources>
    <string name="app_name">RushTPO</string>
    <string name="test_string">Test</string>
    <string name="brother_name">%1$s</string>
    <string name="why_tau_psi_string">Why Tau Psi?</string>
    <string name="crossed_intro">Joined: %1$s</string>
    <string name="major_intro">Major: %1$s</string>
    <string name="fun_fact_intro">Fun Fact: %1$s</string>
    
    <string name="rush_event_Location">Location: %1$s</string>

    <string name="rush_event_Time">Time: %1$s</string>
    
    
    <string name="rush_header">What is Rush?</string>
    <string name="requirements_header">Requirements</string>
    <string name="events_header">Events</string>
    <string name="about_us_header">Introduction</string>



    <string name="about_tau_psi_intro">
        This is not your typical fraternity. We don’t have trust funds. We don’t charge an exorbitant amount of money to hold membership every year.
        Tau Psi Omega is unique in and of itself. We are a multi-cultural and community service based fraternity.
        We take pride in the diverse make-up of our fraternity in terms of nationality, ethnicity, race, religion.
    </string>



    <string name="about_tau_psi_middle">
        As a community service based fraternity we hold providing quality and meaningful community service paramount in our fraternity.
        In addition to all of this, we also like to have fun!
        We are in college after all and lets be real; in addition to preparing ourselves for future careers
        we also want to have the times of our lives.
    </string>


    <string name="about_tau_psi_end">
        The best thing about Tau Psi Omega is that we do all of these things together.
        The brotherhood is real, this brotherhood is for life.  We have so many personalities as well and there is a niche for every single type of person.
        Whether you are a bookworm, computer nerd, a gym rat, an intramural sports all-star or just a guy still trying to
        really find yourself we got room for you and spot for you if you are willing to put in the work to earn these letters.
    </string>



    <string name="rush_description">

        Rush is a series of events set up by the fraternity to get to know you.
        We don’t want to just hand out bids to anyone. Rush events are so that you can hang out, talk to and really get to know the members of a fraternity and figure out if you can connect on a
        more meaningful level with them or you find out maybe it just isn’t for you. The same goes for the fraternity, we want to know more about you and see if we see in you the qualities of a
        Tau Psi Omega man. At the end of Rush brothers will give an invitation (known as a bid) to a group of select rushees, to pledge our fraternity.

    </string>



    <string name="requirements_description">
        A prospective member must have attended at least three rush events, complete an interview and have a cumulative GPA of 2.5
        to officially receive a bid to pledge Tau Psi Omega Fraternity, Inc.
        The three rush events must be an informational, a social event and a community service event.
        It is best to attend as many rush events as possible to get to know the current members of the fraternity and have them get to know you.

    </string>

    <string name="greekLetters">\u03A4 \u03a8 \u03a9 </string>

    <string name="toolBarHeader">Tau Psi Omega Fraternity Inc.</string>


    <string name="social_media_follow">Follow Us on Social Media</string>

    <string name="questions">Contact Us</string>

    <string name="peName">Uriel Valenzuela</string>
    <string name="peTitle">Pledge Educator</string>
    <string name="peEmail">Uriel.valenzuela15@gmail.com</string>
</resources>
