<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false">


    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_background"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rush_header"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:id="@+id/fragment_rush_rush_header"
        />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/rush_description"/>



    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_background"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirements_header"
        android:layout_centerInParent="true"
        android:id="@+id/fragment_rush_requirments_header"
        android:textColor="#000"
        android:textStyle="bold"
        />

</RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/requirements_description"
        />




    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_background"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_header"
        android:id="@+id/fragment_rush_events_header"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        />

</RelativeLayout>




</LinearLayout>